add all dashboard and donation campaign

--- a/src/pages/shared/bannerCard.css
+++ b/src/pages/shared/bannerCard.css
@@ -19,25 +19,22 @@
   }
   
   .banner-card .swiper-slide:nth-child(1n) {
-    background-image: url('src/assets/banner-books/book1.png');
+    background-image: url('src/assets/banner-books/book1.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(2n) {
-    background-image: url('src/assets/banner-books/book2.png');
+    background-image: url('src/assets/banner-books/book2.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(3n) {
-    background-image: url('src/assets/banner-books/book3.png');
+    background-image: url('src/assets/banner-books/book3.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(4n) {
-    background-image: url('src/assets/banner-books/book4.png');
+    background-image: url('src/assets/banner-books/book4.jpg');
   }
   
-  .banner-card .swiper-slide:nth-child(5n) {
-    background-image: url('src/assets/banner-books/book5.png');
-  }
-
+  
   
 
   @media  (max-width: 768px){
